--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* Style sheet for index, portfolio, and contact pages */
+/* Style sheet for all pages */
 
 /* Overall CSS if not specified below */
 * {
@@ -7,10 +7,13 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Margin must be 0 to override browser CSS */
+/* Margin and padding must be 0 to account for Browser's standard margin and padding settings.
+This makes the webpage flush with the top of the browser.*/
 body {
-    margin: 0px;
-    background-image: url("../images/herringbone.png");
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-image: url("../images/criss-cross.png");
 }
 
 header {
@@ -18,7 +21,7 @@ header {
     left: 0;
     top: 0;
     background: #ffffff;
-    height: 100px;
+    height: 60px;
     width: 100%;
     display: block;
     float: left;
@@ -26,15 +29,9 @@ header {
     margin-bottom: 50px;
 }
 
-#clearfix::after {
-    clear: both;
-}
-
 /* Navigation bar matches sizing of main container */
 .navigation {
-    position: relative;
     max-width: 960px;
-    box-sizing: border-box;
     overflow: auto;
     margin: 0 auto;
     height: 100%;
@@ -44,17 +41,17 @@ header {
 
 nav {
     position: absolute;
-    bottom: 0px;
+    top: 0px;
     right: 0px;
     padding: 20px;
 }
 
 a {
-    padding: 10px;
+    padding: 12px;
     text-decoration: none;
 }
 
-/* makes a border for all 'a's except for the last one */
+/* makes a right border for all 'a's except "Contact" */
 a:not(:last-child) {
     border-right: 1px solid #c2bfbf;
 }
@@ -63,17 +60,15 @@ h1 {
     position: absolute;
     bottom: 0px;
     margin: auto;
-    float: left;
-    text-align: left;
+    text-align: center;
     color: #ffffff;
     background-color: #4aaaa5;
-    padding: 15px;
+    padding: 12px;
     font-family: 'Times New Roman', Times, serif;
 }
 
 h2 {
     text-align: left;
-    clear: both;
     color: #4aaaa5;
     font-size: 24px;
     font-family: 'Times New Roman', Times, serif;
@@ -83,8 +78,9 @@ h2 {
     float: left;
     max-width: 30%;
     height: auto;
-    border-radius: 8px;
-    margin: 5px;
+    border-radius: 24px;
+    border: purple;
+    margin: 8px;
 }
 
 p {
@@ -191,9 +187,9 @@ footer {
     bottom: 0px;
     width: 100%;
     color: #ffffff;
-    height: 50px;
+    height: 35px;
     background-color: #666666;
     padding: 20px;
-    border-top: 8px solid #4aaaa5;
+    border-top: 8px solid;
     border-color: #4aaaa5;
 }
