--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,13 +164,14 @@ input:active {
     object-fit: cover;
     width: 200px;
     height: 200px;
+    margin: 10px;
 }
 
 .textBlock {
     box-sizing: border-box;
     position: absolute;
     bottom: -15px;
-    left: 10px;
+    left: 12px;
     width: 100%;
     background-color: #4aaaa5;
     opacity: 0.8;
